--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   intl: ^0.19.0
   path: ^1.8.3
   path_provider: ^2.1.2
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
