--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   intl: ^0.19.0
   path: ^1.8.3
   google_fonts: ^6.1.0
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
