--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   google_fonts: ^6.1.0
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
+  in_app_review: ^2.0.8
 
 dev_dependencies:
   flutter_test:
