--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,11 +16,14 @@ dependencies:
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
   in_app_review: ^2.0.8
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  json_serializable: ^6.7.1
+  build_runner: ^2.4.8
 
 flutter:
   uses-material-design: true
