--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   equatable: ^2.0.5
   in_app_review: ^2.0.8
   json_annotation: ^4.8.1
+  meta: ^1.9.1
 
 dev_dependencies:
   flutter_test:
