added urls that can be open in browser by clicking on user agreement or privacy policy from settings

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   in_app_review: ^2.0.8
   json_annotation: ^4.8.1
   meta: ^1.9.1
+  url_launcher: ^6.2.4
 
 dev_dependencies:
   flutter_test:
