--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   json_annotation: ^4.8.1
   meta: ^1.9.1
   url_launcher: ^6.2.4
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
