changed quiz json, added more quizzes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,3 +37,4 @@ flutter:
     - assets/images/
     - assets/images/training_images/
     - assets/images/news_images/
+    - assets/images/quiz_images/
