--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,12 @@ dev_dependencies:
   build_runner: ^2.4.8
   flutter_launcher_icons: ^0.13.1
 
+flutter_launcher_icons:
+  android: false
+  ios: true
+  image_path: "assets/icons/launcher_icon.png"
+
+
 flutter:
   uses-material-design: true
   assets:
