--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: false
   ios: true
+  remove_alpha_ios: true
   image_path: "assets/icons/launcher_icon.png"
 
 
