--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   sqflite: ^2.3.0
-  intl: ^0.19.0
+  intl: ^0.18.1
   path: ^1.8.3
   google_fonts: ^6.1.0
   flutter_bloc: ^8.1.3
@@ -20,6 +20,8 @@ dependencies:
   meta: ^1.9.1
   url_launcher: ^6.2.4
   image_picker: ^1.0.7
+  device_preview: ^1.1.0
+  flutter_screenutil: ^5.9.0
 
 dev_dependencies:
   flutter_test:
