--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,9 +45,9 @@ flutter:
     - assets/jsons/
     - assets/icons/
     - assets/images/
-    # - assets/images/preparation_images/
-    # - assets/images/preparation_images/slovo_pacana/
-    # - assets/images/preparation_images/dva_holma/
-    # - assets/images/preparation_images/trigger/
-    # - assets/images/news_images/
-    # - assets/images/quiz_images/
+    - assets/images/preparation_images/
+    - assets/images/preparation_images/slovo_pacana/
+    - assets/images/preparation_images/dva_holma/
+    - assets/images/preparation_images/trigger/
+    - assets/images/news_images/
+    - assets/images/quiz_images/
