--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   image_picker: ^1.0.7
   device_preview: ^1.1.0
   flutter_screenutil: ^5.9.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
