--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   sqflite: ^2.3.0
   intl: ^0.18.1
   path: ^1.8.3
+  path_provider: ^2.1.2
   google_fonts: ^6.1.0
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
